[package]
name = "url-shortener-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
chrono = "0.4.23"
dotenv = "0.15.0"
nanoid = "0.4.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres" ] }
